2004-11-09  Matthias Clasen  <mclasen@redhat.com>

	* tests/testiconview.c: Add a real "Add many" button.

	* gtk/gtkaction.[hc]: 
	* gtk/gtkactiongroup.[hc]: Make return types G_CONST_RETURN
	instead of const.

	* gtk/gtk.symbols: 
	* gtk/gtkaction.h: 
	* gtk/gtkaction.c (gtk_action_get_accel_path): Add
	a function to obtain the accel path of an action. (#148106,
	Michael Natterer)

	* tests/testiconview.c: Fix double-click activation.

	* gtk/gtkstatusbar.c (gtk_statusbar_init): Raise the grip
	window when appropriate.
	(gtk_statusbar_init): Instead of cutting the text of, make
	ellipsize the label.
	(gtk_statusbar_size_allocate): Don't let the label extend
	under the resize grip.

	* gtk/gtkcombobox.c (find_menu_by_path) 
	(gtk_combo_box_menu_fill_level, gtk_combo_box_menu_row_inserted): 
	Use a row reference, not a path, to associate separators
	with their tree row.  
	
	* gtk/gtkstatusbar.c (gtk_statusbar_set_has_resize_grip): 
	Show the grip_window if necessary.  

	* gtk/gtkstyle.c (gtk_default_draw_resize_grip): Only
	clear the triangle below the grip to the background,
	not the full area. 

	* gtk/gtklabel.c (draw_insertion_cursor, gtk_label_expose): 
	Clip when drawing the cursor. This prevents bits of a
	selectable label leaking out from underneath the resize
	grip in a statusbar.  (#73359)

	* gtk/gtkstatusbar.c: Apply a patch by Owen Taylor to
	get reasonable allocations for the statusbar and its
	children.  (#73359)

	* tests/testgtk.c: Apply a patch by Soeren Sandmann to 
	test long statusbar texts.

	* gtk/gtk.symbols: Add new symbols.

	Avoid resizing GtkStatusbar if the text of the label 
	changes  (#90955, He Qiangqiang, fix proposed by 
	Owen Taylor, patch by Christian Persch)
	
	* gtk/gtklabel.[hc]: Add a boolean single-line-mode property 
	which causes the label height not to depend on the actual
	text, but only on the font.

	* gtk/gtkstatusbar.c (gtk_statusbar_init): Turn on
	single-line-mode for the label.
